--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,7 +41,7 @@ elseif("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
   add_compile_options(-Wimplicit-fallthrough -fcolor-diagnostics -ferror-limit=0)
 endif()
 
-#add_compile_options(-Werror)
+# add_compile_options(-Werror)
 
 set(allowedBuildTypes
     Debug
@@ -50,9 +50,10 @@ set(allowedBuildTypes
     MSAN
     UBSAN
     TSAN
-    Profile
-    CPUProfile
-    HeapProfile)
+    PPROF_HEAP
+    PPROF
+    PERF
+    GPROF)
 set_property(CACHE CMAKE_BUILD_TYPE PROPERTY STRINGS "${allowedBuildTypes}")
 if(CMAKE_BUILD_TYPE AND NOT CMAKE_BUILD_TYPE IN_LIST allowedBuildTypes)
   message(FATAL_ERROR "Invalid build type: ${CMAKE_BUILD_TYPE}")
@@ -61,60 +62,26 @@ endif()
 # in case of compilation error in the pegtl templates, this will show the full stacktrace
 add_compile_options($<$<COMPILE_LANGUAGE:CXX>:-ftemplate-backtrace-limit=0>)
 
-set(CMAKE_C_FLAGS_DEBUG
-    "-g -O0"
-    CACHE STRING "Debug build" FORCE)
-set(CMAKE_CXX_FLAGS_DEBUG
-    "-g -O0"
-    CACHE STRING "Debug build" FORCE)
-set(CMAKE_C_FLAGS_RELEASE
-    "-DNDEBUG -O3"
-    CACHE STRING "Release build" FORCE)
-set(CMAKE_CXX_FLAGS_RELEASE
-    "-DNDEBUG -O3"
-    CACHE STRING "Release build" FORCE)
-set(CMAKE_C_FLAGS_ASAN
-    "-fsanitize=address -fno-sanitize-recover=all -fno-omit-frame-pointer -fno-optimize-sibling-calls -g -O0"
-    CACHE STRING "Address Sanitizer build" FORCE)
-set(CMAKE_CXX_FLAGS_ASAN
-    "-fsanitize=address -fno-sanitize-recover=all -fno-omit-frame-pointer -fno-optimize-sibling-calls -g -O0"
-    CACHE STRING "Address Sanitizer build" FORCE)
-set(CMAKE_C_FLAGS_MSAN
-    "-fsanitize=memory -fno-sanitize-recover=all -fsanitize-memory-track-origins -fno-omit-frame-pointer -fno-optimize-sibling-calls -g -O0"
-    CACHE STRING "Memory Sanitizer build" FORCE)
-set(CMAKE_CXX_FLAGS_MSAN
-    "-fsanitize=memory -fno-sanitize-recover=all -fsanitize-memory-track-origins -fno-omit-frame-pointer -fno-optimize-sibling-calls -g -O0"
-    CACHE STRING "Memory Sanitizer build" FORCE)
-set(CMAKE_C_FLAGS_UBSAN
-    "-fsanitize=undefined -fno-sanitize-recover=all -g -O0"
-    CACHE STRING "Undefined Behaviour Sanitizer" FORCE)
-set(CMAKE_CXX_FLAGS_UBSAN
-    "-fsanitize=undefined -fno-sanitize-recover=all -g -O0"
-    CACHE STRING "Undefined Behaviour Sanitizer" FORCE)
-set(CMAKE_C_FLAGS_TSAN
-    "-fsanitize=thread -fno-sanitize-recover=all -g -O1"
-    CACHE STRING "Thread Sanitizer" FORCE)
-set(CMAKE_CXX_FLAGS_TSAN
-    "-fsanitize=thread -fno-sanitize-recover=all -g -O1"
-    CACHE STRING "Thread Sanitizer" FORCE)
-set(CMAKE_C_FLAGS_PROFILE
-    "-pg -g"
-    CACHE STRING "gprof profiler" FORCE)
-set(CMAKE_CXX_FLAGS_PROFILE
-    "-pg -g"
-    CACHE STRING "gprof profiler" FORCE)
-set(CMAKE_C_FLAGS_CPUPROFILE
-    "-g -O0"
-    CACHE STRING "CPU Profiler" FORCE)
-set(CMAKE_CXX_FLAGS_CPUPROFILE
-    "-g -O0"
-    CACHE STRING "CPU Profiler" FORCE)
-set(CMAKE_C_FLAGS_HEAPPROFILE
-    "-g -O0"
-    CACHE STRING "Heap Profiler" FORCE)
-set(CMAKE_CXX_FLAGS_HEAPPROFILE
-    "-g -O0"
-    CACHE STRING "Heap Profiler" FORCE)
+set(CMAKE_C_FLAGS_DEBUG "-g -O0" CACHE STRING "Debug build" FORCE)
+set(CMAKE_CXX_FLAGS_DEBUG "-g -O0" CACHE STRING "Debug build" FORCE)
+set(CMAKE_C_FLAGS_RELEASE "-DNDEBUG -O3" CACHE STRING "Release build" FORCE)
+set(CMAKE_CXX_FLAGS_RELEASE "-DNDEBUG -O3" CACHE STRING "Release build" FORCE)
+set(CMAKE_C_FLAGS_ASAN "-fsanitize=address -fno-sanitize-recover=all -fno-omit-frame-pointer -fno-optimize-sibling-calls -g -O0" CACHE STRING "Address Sanitizer build" FORCE)
+set(CMAKE_CXX_FLAGS_ASAN "-fsanitize=address -fno-sanitize-recover=all -fno-omit-frame-pointer -fno-optimize-sibling-calls -g -O0" CACHE STRING "Address Sanitizer build" FORCE)
+set(CMAKE_C_FLAGS_MSAN "-fsanitize=memory -fno-sanitize-recover=all -fsanitize-memory-track-origins -fno-omit-frame-pointer -fno-optimize-sibling-calls -g -O0" CACHE STRING "Memory Sanitizer build" FORCE)
+set(CMAKE_CXX_FLAGS_MSAN "-fsanitize=memory -fno-sanitize-recover=all -fsanitize-memory-track-origins -fno-omit-frame-pointer -fno-optimize-sibling-calls -g -O0" CACHE STRING "Memory Sanitizer build" FORCE)
+set(CMAKE_C_FLAGS_UBSAN "-fsanitize=undefined -fno-sanitize-recover=all -g -O0" CACHE STRING "Undefined Behaviour Sanitizer" FORCE)
+set(CMAKE_CXX_FLAGS_UBSAN "-fsanitize=undefined -fno-sanitize-recover=all -g -O0" CACHE STRING "Undefined Behaviour Sanitizer" FORCE)
+set(CMAKE_C_FLAGS_TSAN "-fsanitize=thread -fno-sanitize-recover=all -g -O1" CACHE STRING "Thread Sanitizer" FORCE)
+set(CMAKE_CXX_FLAGS_TSAN "-fsanitize=thread -fno-sanitize-recover=all -g -O1" CACHE STRING "Thread Sanitizer" FORCE)
+set(CMAKE_C_FLAGS_PPROF_HEAP "-g -O0" CACHE STRING "pprof Heap profiler" FORCE)
+set(CMAKE_CXX_FLAGS_PPROF_HEAP "-g -O0" CACHE STRING "pprof Heap profiler" FORCE)
+set(CMAKE_C_FLAGS_PPROF "-g -O0" CACHE STRING "pprof CPU profiler" FORCE)
+set(CMAKE_CXX_FLAGS_PPROF "-g -O0" CACHE STRING "pprof CPU profiler" FORCE)
+set(CMAKE_C_FLAGS_PERF "-g -O0" CACHE STRING "perf profiler" FORCE)
+set(CMAKE_CXX_FLAGS_PERF "-g -O0" CACHE STRING "perf profiler" FORCE)
+set(CMAKE_C_FLAGS_GPROF "-pg -g" CACHE STRING "gprof profiler" FORCE)
+set(CMAKE_CXX_FLAGS_GPROF "-pg -g" CACHE STRING "gprof profiler" FORCE)
 
 if("${CMAKE_BUILD_TYPE}" STREQUAL "MSAN" AND "${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
   message(FATAL_ERROR "Memory sanitizer is not currently supported by gcc. Try clang instead.")
@@ -133,11 +100,11 @@ add_executable(facility_game facility_game.cpp)
 
 target_link_libraries(facility_game PRIVATE fmt::fmt)
 
-if(CMAKE_BUILD_TYPE STREQUAL Profile)
+if(CMAKE_BUILD_TYPE STREQUAL GPROF)
   target_link_options(facility_game PRIVATE "-pg")
-elseif(CMAKE_BUILD_TYPE STREQUAL CPUProfile)
+elseif(CMAKE_BUILD_TYPE STREQUAL PPROF)
   target_link_libraries(facility_game PRIVATE profiler)
-elseif(CMAKE_BUILD_TYPE STREQUAL HeapProfile)
+elseif(CMAKE_BUILD_TYPE STREQUAL PPROF_HEAP)
   target_link_libraries(facility_game PRIVATE tcmalloc)
 elseif(CMAKE_BUILD_TYPE STREQUAL TSAN)
   target_link_options(facility_game PRIVATE -fsanitize=thread)
